--- a/week1/tmap_intro.qmd
+++ b/week1/tmap_intro.qmd
@@ -71,13 +71,13 @@ Let's load three spatial data objects to plot:
 #| eval: false
 
 # raster of global elevations
-world_elevation <- read_stars(here::here('week1', 'data','worldelevation.tif'))
+world_elevation <- read_stars(here::here('data', 'worldelevation.tif'))
 
 # country boundaries
-world_vector <- read_sf(here::here('week1', 'data', 'worldvector.gpkg'))
+world_vector <- read_sf(here::here('data', 'worldvector.gpkg'))
 
 # major cities
-world_cities <- read_sf(here::here('week1', 'data', 'worldvector.gpkg'))
+world_cities <- read_sf(here::here('data', 'worldvector.gpkg'))
 
 ```
 
@@ -87,7 +87,8 @@ In `tmap`, the spatial object to plot needs to be defined within the function `t
 
 Let's start by plotting the countries of the world.
 ```{r}
-
+tm_shape(world_vector) + # Defines the spatial object to plot
+  tm_polygons() # Defines how to plot the object
 
 ```
 
@@ -103,7 +104,10 @@ Now let's plot the following two spatial objects:
 In the next section we'll unpack the difference between `tm_polygons()` and `tm_dots()`, but for now let's just pay attention to the syntax of how we plot multiple spatial objects. Each spatial object needs to be specified using `tm_shape()` followed by a function for how to plot it. 
 
 ```{r}
-
+tm_shape(world_vector) + # Defines the spatial object to plot
+    tm_polygons() + # Defines how to plot the object
+  tm_shape(world_cities) + # Defines the second object to plot
+    tm_dots() # Defines how to plot the second object
 ```
 
 So far, we've only tried plotting *vector* data (more on what this means next week!), but one of the major advantages of `tmap` is that it allows us to plot *vector* and *raster* on the same map.
@@ -111,6 +115,15 @@ So far, we've only tried plotting *vector* data (more on what this means next we
 Let's try on example of this by adding information on global elevations to our previous map.
 
 ```{r}
+# plotting vector and raster data on the same map
+tm_shape(world_elevation) + # plot global elevations
+  tm_raster() + #tm_raster for raster data
+tm_shape(world_vector) + # 
+  tm-borders() +
+tm_shape(world_cities) +
+  tm_dots() +
+  tm_text('name', size = 0.7, col = "blue")
+
 
 ```
 
@@ -119,14 +132,25 @@ Similar to `ggplot2` the order of the "layers" matters! The order in which datas
 For example, if we swapped the order of `tm_shape()` calls in the previous example, we'd end up with a different map.
 
 ```{r}
-
-
+tm_shape(world_cities) +
+  tm_dots() +
+  tm_text("name") +
+tm_shape(world_elevation) +
+  tm_raster() +
+tm_shape(world_vector) +
+  tm_borders()
 ```
 
 Sometimes this can present sticky issues! Imagine the case where we want to use the spatial extent and projection from the `world_cities` data, but want it plotted on top of the other datasets. We can do this by changing the main *shape* using the `is.main` argument.
 
 ```{r}
-
+tm_shape(world_elevation) +
+  tm_raster() +
+tm_shape(world_vectors) +
+  tm_borders() +
+tm_shape(world_cities, is.main = TRUE) + # plotting world_cities last, but set as main shape
+  tm_dots() +
+  tm_text("name")
 
 ```
 
@@ -145,12 +169,20 @@ For example, let's restrict our previous map to just Europe using a set of min/m
 
 ```{r}
 
+tm_shape(world_elevation, bbox = c(-15, 35, 45, 65)) + # add bounding to restrict extent of map
+  tm_raster() +
+tm_shape(world_vector)+
+  tm_borders()
+
 ```
 
 We can also restrict the extent of the map using the extent of a dataset. For example, we can restrict the map using the extent of the `world_cities` data.
 
 ```{r}
-
+tm_shape(world_elevation, bbox = world_cities) + # bounding box = world_cities
+  tm_raster() +
+tm_shape(world_vector)+
+  tm_borders()
 
 ```
 
@@ -160,9 +192,10 @@ We can also restrict the extent of the map using the extent of a dataset. For ex
 You can also restrict the map extent using an OpenStreetMap tool called Nominatim to automatically generate minimum and maximum coordinates in the x and y directions based on the provided query.
 
 ```{r}
-
-
-
+tm_shape(world_elevation, bbox = "Europe") +
+  tm_raster() +
+tm_shape(world_vector) +
+  tm_borders()
 ```
 
 :::
@@ -224,7 +257,11 @@ tm_shape(world_vector) +
 We modify the colors useing the `col` and `border.col` arguments and other arguments borrowed from `ggplot2`.
 
 ```{r}
-
+tm_shape(world_vector) +
+  tm_polygons(fill = "lightblue",
+              col = "black",
+              lwd = 0.5,
+              lty = "dashed")
 
 ```
 
@@ -233,15 +270,27 @@ But, you may have noticed in the previous table that `tm_polygons` isn't the onl
 The `tm_borders()` function plots just the borders and the `tm_fill()` function fills polygons with a fixed color or a color palette representing a selected variable. 
 
 ```{r}
+# Plot just the borders
+tm_shape(world_vector) +
+  tm_borders(col = "red")
+
+
+```
+
+```{r}
+# Fill polygon with fixed color
+tm_shape(world_vector) +
+  tm_fill(fill = "lightblue") +
+  tm_borders(col = "black")
+
 
 ```
 
 ```{r}
 
-
-```
-
-```{r}
+# fill polygon with a color palette representing a variable 
+tm_shape(world_vector) + 
+  tm_fill("CO2_emissions")
 
 ```
 
@@ -259,6 +308,9 @@ Symbols are a very flexible layer type. They typically represent point data, but
 `tm_symbols()` is the main function in `tmap` to display and modify symbol elements. By default, this function draws a gray circle symbol with a black border for each element of an input feature.
 
 ```{r}
+tm_shape(world_cities) +
+  tm_symbols()
+
 
 ```
 
@@ -270,6 +322,11 @@ Symbols are a very flexible layer type. They typically represent point data, but
 - `tm_markers()`: uses marker icons
 
 ```{r}
+
+tm_shape(world_cities) +
+  tm_symbols(shape = 90) +
+  tm_dots()
+  # tm_bubbles()
 
 ```
 
@@ -314,7 +371,11 @@ Just like updating axis labels, we always need to update legend titles. In `tmap
 :::
 
 ```{r}
-
+tm_shape(world_cities) +
+  tm_polygons(fill = "life_expectancy",
+              fill.scale = tm_scale(values = c("yellow", "darkgreen")),
+              fill.legend = tm_legend(title = "Life Expectancy (years)",
+              position = tm_pos_out("left")))
 
 ```
 
@@ -327,14 +388,20 @@ Another approach is to provide the output of a palette function. When using a pa
 #install.packages("viridisLite")
 library(viridisLite)
 
-
+tm_shape(world_vector)+
+  tm_polygons(fill = "life_expectancy",
+              fill.scale = tm_scale(values = viridis(8)),
+              fill.legend = tm_legend(title = "Life expectancy (years)"))
 
 ```
 
 Finally, the last approach is to use the name of one of the built-in color palettes.
 
 ```{r}
-
+tm_shape(world_vector) +
+  tm_polygons(fill = "life_expectancy",
+              fill.scale = tm_scale(values = "brewer.yl_gn"),
+              fill.legend = tm_legend(title = "Life Expectancy (years)"))
 ```
 
 ### Size
@@ -342,10 +409,18 @@ Finally, the last approach is to use the name of one of the built-in color palet
 Sizes can be used for points, lines (line widths), or text to represent quantitative (numerical) variables. By default, `tmap` represents points, lines, or text objects as the same size. The size of objects can be changed by using the `size` argument.
 
 ```{r}
-
-
+tm_shape(world_vector) +
+  tm_polygons(fill = "lightblue")+
+tm_shape(world_cities) +
+  tm_symbols(
+    size = "pop2020",
+    size.legend = tm_legend(orientation = "portrait")
+  )
 ```
 
+```{r}
+colnames(world_vector)
+```
 
 ## 6. Layout
 
@@ -384,18 +459,32 @@ The `tmap` package offers two ways to draw coordinate lines - `tm_grid()` and `t
 
 
 ```{r}
+tm_shape(world_vector) +
+  tm_fill()+
+  tm_grid()
+
 
 ```
 
 `tm_graticules()` shows latitude and longitude lines, with degrees as units
 
 ```{r}
+tm_shape(world_vector) +
+  tm_fill()+
+  tm_graticules()
+
+
 
 ```
 
 Both `tm_grid()` and `tm_graticules()` can be placed above or below other map layers.
 
 ```{r}
+tm_shape(world_vector) +
+  tm_fill()+
+  tm_graticules() +
+  tm_grid()
+
 
 ```
 
@@ -404,6 +493,10 @@ Both `tm_grid()` and `tm_graticules()` can be placed above or below other map la
 A scale bar is a graphic indicator of the relation between a distance on a map and the corresponding distance in the real world. A north arrow, or a map compass or compass rose, indicates the orientation of the map. North arrows can be added to every map, but are not necessary on maps of large areas (e.g. global maps) where the orientation is obvious.
 
 ```{r}
+tm_shape(world_vector) +
+  tm_fill()+
+  tm_scalebar() +
+  tm_compass(north = 180, position = c("left", "top"))
 
 
 ```
@@ -414,6 +507,15 @@ Similar to the `theme()` function in `ggplot2`, the `tm_layout()` function in `t
 
 ```{r}
 
+tm_shape(world_vector) +
+  tm_polygons(fill = "wb_income_region",
+          #fill.scale = tm_scale(values = viridisLite::plasma(5)),
+          fill.legend  = tm_legend(title = "Regional Income")) +
+  tm_title(text = "Global income",
+            frame = TRUE)+ 
+  tm_layout(text.fontfamily = "Montserrat",
+            style= "beaver",
+            bg.color = "grey95")
 ```
 
 
