--- a/week1/tmap_intro.qmd
+++ b/week1/tmap_intro.qmd
@@ -451,7 +451,7 @@ knitr::kable(attr_layers_df,
   kableExtra::kable_styling("striped",
                             latex_options = "striped", 
                             full_width = FALSE) %>% 
-  kableExtra::column_spec(1, bold = TRUE, monospace = TRUE)
+  kableExtra::rcolumn_spec(1, bold = TRUE, monospace = TRUE)
 ```
 
 ### Grid lines
