--- a/week3/spatial_operations.qmd
+++ b/week3/spatial_operations.qmd
@@ -279,7 +279,7 @@ In this example, we would like join the `capacity` attribute from the `cycle_hir
 ```{r}
 cycle_hire <- spData::cycle_hire
 
-cycle_hire_osm <- SpData:: cycle_hire_osm
+cycle_hire_osm <- pData:: cycle_hire_osm
 ```
 
 ```{r}
@@ -331,7 +331,11 @@ Let's consider the example where we would like to make a map of the mean elevati
 The first approach is by leveraging `st_join()` again. But in this example, we want the `nz` object to be the target to maintain the geometries we need.
 
 ```{r}
+tmap_mode("plot")
 
+nz_elevation_join <- st_join(x = nz, y = nz_height) |> 
+  group_by(Name) |> 
+  summarise(elevation = mean(elevation, na.rm = TRUE))
 ```
 
 The second approah uses the `aggregate()` function. Although it doesn't follow the `dplyr` piping convention we're used to, `aggregate()` will come in handy later, so it's nice to see how it works.
@@ -339,11 +343,25 @@ The second approah uses the `aggregate()` function. Although it doesn't follow t
 The syntax looks slightly different, in this case the argument `x` is the data we would like to aggregate (`nz_height`) and the `by` argument specifies the geometry that you would like to group by. The `FUN` argument defines the function that you would like to use to aggregate, in this case `mean`.
 
 ```{r}
+nz_elevation_agg <- aggregate(x = nz_height, by = nz, FUN = mean)
 ```
 
 ```{r}
 #| message: false
 
+map1 <- tm_shape(nz_elevation_join) +
+  tm_polygons(fill = 'elevation',
+              fill.legend = tm_legend(title = "Mean elevation (meters)")) +
+  tm_title(text = "group_by()")
+
+
+map1 <- tm_shape(nz_elevation_agg) +
+  tm_polygons(fill = 'elevation',
+              fill.legend = tm_legend(title = "Mean elevation (meters)")) +
+  tm_title(text = "aggregate()")
+
+
+tmap_arrange(map1, map2, nrow = 1)
 ```
 
 ::: {.callout-note icon="true"}
@@ -354,13 +372,30 @@ An important consideration when aggregating spatial objects is that geometries a
 However, in some cases the aggregating zones do not share common borders with the target. This is an issue because it's not clear how to aggregate underlying data. Areal interpolation overcomes this issue by transferring values to another using algorithms, including simple area weighted approaches.
 
 ```{r}
+incongruent <- spData:: incongruent
+aggregating_zones <- spData:: aggregating_zones
+
+tm_shape(incongruent) +
+  tm_polygons(fill = "lightblue",
+              col = "blue") +
+tm_shape(aggregating_zones) +
+  tm_borders(col = "red")
 
 ```
 
 The simplest useful method for this is area weighted spatial interpolation, which transfers values from the `incongruent` object to a new column in `aggregating_zones` in proportion with the area of overlap: the larger the spatial intersection between input and output features, the larger the corresponding value. This is implemented in `st_interpolate_aw()`, as demonstrated in the code chunk below.
 
 ```{r}
+# select just the value we want to aggregate
+incongruent2 <- incongruent |> select(value)
 
+# use area-weighted interpolation to aggregate the "value" attribute
+
+aggregating_zones_area_weighted <- st_interpolate_aw(x = incongruent2,
+                                                     to = aggregating_zones, 
+                                                     extensive = TRUE)
+
+aggregating_zones_area_weighted$value
 ```
 :::
 
@@ -378,21 +413,85 @@ We may come across situations where we would like to summarize data across sever
 
 ```{r}
 #| message: false
+# Load us states
+us_states <- spData::us_states
 
+# SUmmarize total pop by region
+
+regions1 <- us_states |> 
+  group_by(REGION) |> 
+  summarise(population = sum(total_pop_15, na.rm = TRUE))
+
+# Alternative approach: aggregate
+regions2 <- aggregate(x = us_states[,"total_pop_15"], 
+                      by = list(us_states$REGION), 
+                      FUN = sum, na.rm = TRUE)
 ```
 
 ```{r}
 #| code-fold: true
 #| message: false
 #| warning: false
+```
 
+```{r}
+map1 <- tm_shape(us_states) +
+  tm_polygons(fill = "total_pop_15",
+              fill.legend  = tm_legend("Total population")) +
+  tm_title(text = "US States")
+  #tm_layout(meta.margins = c(0.1, 0, 0, 0))
 
+map2 <- tm_shape(regions1) +
+  tm_polygons(fill = "population",
+              fill.legend  = tm_legend("Total population")) +
+  tm_title(text = "group_by()")
+  #tm_layout(meta.margins = c(0.1, 0, 0, 0))
+
+map3 <- tm_shape(regions2) +
+  tm_polygons(fill = "total_pop_15",
+              fill.legend  = tm_legend("Total population")) +
+  tm_title(text = "aggregate()")
+  #tm_layout(meta.margins = c(0.1, 0, 0, 0))
+
+tmap_arrange(map1, map2, map3, nrow = 1)
 ```
 
 What's going on here? Behind the scenes, R is using `st_union()` to combine geometries within each group. We can also use `st_union()` to combine any pair of spatial objects.
 
 ```{r}
+# combine geometries of western states
+us_west <- us_states[us_states$REGION == "West", ]
+us_west_union <- st_union(us_west)
 
+# combine geometries of Texas and western states
+texas <- us_states[us_states$NAME == "Texas", ]
+texas_union <- st_union(us_west_union, texas)
+
+
+```
+
+```{r}
+map1 <- tm_shape(us_west) +
+  tm_polygons() +
+  tm_title(text = "western states")
+ # tm_layout(meta.margins = c(.2, 0, 0, 0))
+
+map2 <- tm_shape(us_west_union) +
+  tm_polygons() +
+  tm_title(text = "western states union")
+  #tm_layout(meta.margins = c(.2, 0, 0, 0))
+
+map3 <- tm_shape(texas) +
+  tm_polygons() +
+  tm_title(text = "TX")
+  #tm_layout(meta.margins = c(.2, 0, 0, 0))
+
+map4 <- tm_shape(texas_union) +
+  tm_polygons() +
+  tm_title(text = "TX + western states union") 
+  #tm_layout(meta.margins = c(.2, 0, 0, 0))
+
+tmap_arrange(map1, map2, map3, map4, nrow = 2)
 ```
 
 ```{r}
@@ -411,20 +510,40 @@ In the previous section, we saw that we can filter spatial objects based on thei
 In this example, let's create 5 km and 50 km buffers around the Seine.
 
 ```{r}
-
+seine_buffer_5km <- st_buffer(seine, dist = units::set_units(5, "km"))
+seine_buffer_50km <- st_buffer(seine, dist = units::set_units(50, "km"))
 ```
 
 ```{r}
+map1 <- tm_shape(seine_buffer_5km) +
+  tm_polygons() +
+  tm_shape(seine) +
+  tm_lines() +
+  tm_title(text = "5km buffer") 
+  #tm_layout(meta.margins = c(.2, 0, 0, 0))
 
+map2 <- tm_shape(seine_buffer_50km) +
+  tm_polygons() +
+  tm_shape(seine) +
+  tm_lines() +
+  tm_title(text = "50km buffer")
+ # tm_layout(meta.margins = c(.2, 0, 0, 0))
+
+tmap_arrange(map1, map2, nrow = 1)
 ```
 
 The Seine is actually comprised of multiple geometries. To make things simpler, and more look better on maps, we can combine geometries using our new friend `st_union`!
 
 ```{r}
+seine_union <- st_union(seine_buffer_50km)
 ```
 
 ```{r}
-
+ tm_shape(seine_union) +
+  tm_polygons() +
+  tm_shape(seine) +
+  tm_lines() +
+  tm_title(text = "50km buffer")
 ```
 
 Now let's see an example of using a buffer to find objects within a set distance. Here, we'll repeat our previous example of finding points within 100 km of Canterbury. And check to see if the results match our previous approach!
@@ -537,11 +656,31 @@ Sometimes the geographic centroid may fall outside of the boundaries of the obje
 Let's inspect a few examples!
 
 ```{r}
+nz_centroid <- st_centroid(nz)
+seine_centroid <- st_centroid(seine)
 
+nz_pos <- st_point_on_surface(nz)
+seine_pos <- st_point_on_surface(seine)
 ```
 
 ```{r}
+map1 <- tm_shape(nz) +
+  tm_polygons() +
+  tm_shape(nz_centroid) +
+  tm_symbols(fill = "red", fill_alpha = 0.5) +
+  tm_shape(nz_pos) +
+  tm_symbols(fill = "blue", fill_alpha = 0.5)+ 
+  tm_layout(meta.margins = c(.2, 0, 0, 0))
 
+map2 <- tm_shape(seine) +
+  tm_lines() +
+  tm_shape(seine_centroid) +
+  tm_symbols(fill = "red", fill_alpha = 0.5) +
+  tm_shape(seine_pos) +
+  tm_symbols(fill = "blue", fill_alpha = 0.5)+ 
+  tm_layout(meta.margins = c(.2, 0, 0, 0))
+
+tmap_arrange(map1, map2, nrow = 1)
 ```
 
 ### Simplification
@@ -551,11 +690,21 @@ We may also want to simplify a `geometry` to make it easier to plot or take up l
 Let's see an example!
 
 ```{r}
-
+seine_simple <- st_simplify(seine, dTolerance = 2000)  # 2000 m
 ```
 
 ```{r}
+map1 <- tm_shape(seine) +
+  tm_lines() +
+  tm_title("original") 
+ # tm_layout(meta.margins = c(.2, 0, 0, 0))
 
+map2 <- tm_shape(seine_simple) +
+  tm_lines() +
+  tm_title("st_simplify()")
+  #tm_layout(meta.margins = c(.2, 0, 0, 0))
+
+tmap_arrange(map1, map2, nrow = 1)
 ```
 
 # Summary of new functions
